@@ -2,4 +2,4 @@
 
 The code for my utilities which run on my server
 
-`java --enable-preview -jar Server-1.0.jar recipient@gmail.com sender`
+`java -jar Server-1.0.jar recipient@gmail.com sender`
